<resources>
    <string name="app_name">Barreira Sanitária\nCOVID-19</string>
    <string name="app_language">Java</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_barreiras">Barreiras Sanitárias</string>
    <string name="title_activity_cadastro_barreira_sanitaria">Cadastro Barreira Sanitária</string>
    <string name="title_activity_detalhes_barreira_sanitaria">Detalhes Barreira Sanitária</string>
    <string name="title_activity_cadastro_pessoa">Cadastro Pessoa</string>
    <string name="title_activity_detalhes_pessoa">Dados Pessoais</string>
    <string name="title_activity_pesquisa_pessoas">Pesquisa Pessoas</string>
    <string name="title_activity_questionario">Questionário</string>

    <string name="btn_entrar">Entrar</string>
    <string name="btn_salvar">Salvar</string>

    <string name="prompt_pesquisa">Pesquisa pelo CPF</string>
    <string name="prompt_username">Usuário</string>
    <string name="prompt_password">Senha</string>

    <string name="campo_nome">Nome</string>
    <string name="campo_descricao">Descrição</string>
    <string name="campo_endereco">Endereço</string>
    <string name="campo_bairro">Bairro</string>
    <string name="campo_cidade">Cidade</string>
    <string name="campo_estado">Estado</string>

    <string name="campo_data_nascimento">Data nascimento</string>
    <string name="campo_documento">Documento CPF</string>
    <string name="campo_telefone">Telefone</string>
    <string name="campo_barreira">Barreira</string>
    <string name="campo_pessoa">Pessoa</string>

    <string name="perguta_viagem_exterior">Fez alguma viagem ao exterior nos últimos 30 dias?</string>
    <string name="perguta_sintoma_febre">Teve febre nos ultimos dias?</string>
    <string name="perguta_sintoma_coriza">Você está com coriza?</string>
    <string name="perguta_sintoma_tosse">Tem tossido muito ultimamente?</string>
    <string name="perguta_sintoma_cancaco">Sentido-se cançado?</string>
    <string name="perguta_sintoma_dor_garganta">Dor de garganta?</string>
    <string name="perguta_sintoma_falta_ar">Dificuldade de respirar ou falta de ar?</string>
    <string name="perguta_sintoma_contato_com_enfermos">Teve contato com alguém com sintomas?</string>
    <string name="campo_observacoes">Observações</string>
    <string name="msg_erro_campo_obrigatorio">Campo obrigatório.</string>
    <string name="msg_bem_vindo_">Bem vindo, %s</string>
    <string name="texto_btn_nao">Não</string>
    <string name="texto_btn_sim">Sim</string>
    <string name="texto_cpf_">CPF: %s</string>
    <string name="titulo_atencao">Atenção</string>
    <string name="msg_deseja_editar_informacoes_">Deseja editar as informações de:\n%s ?</string>
    <string name="texto_barreira">Barreira: </string>
    <string name="texto_pessoa">"Pessoa: "</string>
    <string name="msg_cadastrado_com_sucesso">Cadastrado com sucesso!</string>
    <string name="msg_alterado_com_sucesso">Alterado com sucesso</string>
    <string name="texto_btn_ok">OK</string>
    <string name="msg_erro_generico">Não foi possível concluir a ação.</string>
    <string name="msg_nenhuma_barreira_encontrada">Nenhuma Barreira Sanitária encontrada!</string>
    <string name="msg_nenhuma_pessoa_encontrada">Nenhum registro encontrado.\n Tente procurar novamente.</string>
    <string name="msg_usuario_nao_encontrado">Usuário não encontrado!</string>
    <string name="msg_erro_data_invalida_">Data inválida. Tente no formato %s.</string>
    <string name="msg_erro_termo_pesquisa_">Erro ao pesquisar o termo: \'%s\'.</string>
    <string name="titulo_historico">Histórico</string>
    <string name="msg_historico_passagem_">Histórico de %s</string>
    <string name="txt_btn_ver">Ver</string>
    <string name="questionarioa_salvo">Questionário realizado com sucesso!</string>

</resources>
