<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/questionario_cordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/app_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_barreira"
                android:textSize="@dimen/tamanho_texto_destaque" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/questionario_txt_nome_barreira"
                style="@style/TextHighlight.Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@tools:sample/cities" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_pessoa"
                android:textSize="@dimen/tamanho_texto_destaque" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/questionario_txt_nome_pessoa"
                style="@style/TextHighlight.Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                tools:text="@tools:sample/first_names" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_margin">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/layout_perguntas_questionario" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/questionario_inputlayout_observacoes"
                    style="@style/TextInputLayout_OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/campo_observacoes">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/questionario_edt_observacoes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/questionario_btn_salvar"
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="32dp"
                    android:text="@string/btn_salvar" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
